--- a/projects.html
+++ b/projects.html
@@ -154,7 +154,7 @@
    
         <!--referente ao RPA--> 
           
-        <div class="carousel-modal" id="carouselModal0" style="display: flex; justify-content: center; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8);">
+        <div class="carousel-modal" id="carouselModal0" style="display: none; justify-content: center; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8);">
           <button class="close-btn" onclick="closeCarousel(0)" style="position: absolute; top: 10px; right: 10px; background: none; border: none; color: white; font-size: 24px; cursor: pointer;">×</button>
             <div class="carousel-container" style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%;">
               <div class="carousel-slide active">
@@ -170,7 +170,7 @@
         </div><!--FIM referente ao RPA-->
 
        <!--referente ao ML-->
-      <div class="carousel-modal" id="carouselModal1" style="display: flex; justify-content: center; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8);">
+      <div class="carousel-modal" id="carouselModal1" style="display: none; justify-content: center; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8);">
         <button class="close-btn" onclick="closeCarousel(1)" style="position: absolute; top: 10px; right: 10px; background: none; border: none; color: white; font-size: 24px; cursor: pointer;">×</button>
           <div class="carousel-container" style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%;">
             <div class="carousel-slide active">
@@ -186,7 +186,7 @@
       </div> <!--FIM referente ao ML--> 
 
       <!--referente ao SaaS-->
-      <div class="carousel-modal" id="carouselModal2" style="display: flex; justify-content: center; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8);">
+      <div class="carousel-modal" id="carouselModal2" style="display: none; justify-content: center; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8);">
         <button class="close-btn" onclick="closeCarousel(2)" style="position: absolute; top: 10px; right: 10px; background: none; border: none; color: white; font-size: 24px; cursor: pointer;">×</button>
           <div class="carousel-container" style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%;">
             <div class="carousel-slide active">
